syntax = "proto3";

option csharp_namespace = "DrawService.Api.Models.Protos.Prizes";

package prizes;

service Prizes {
  rpc Determine (DeterminePrizeProtoRequest) returns (DeterminePrizeProtoResponse);
} 

enum PrizeTierProto {
    GRAND = 0;
    SECOND = 1;
    THIRD = 2;
}

message PrizeProto {
    string id = 1;
    string ticketId = 2;
    int64 amount = 3;
    PrizeTierProto tier = 4;
    string drawId = 5;
}

message DeterminePrizeProtoRequest {
    string drawId = 1;
}

message DeterminePrizeProtoResponse {
    bool success = 1;
    string errorMsg = 2;
    repeated PrizeProto prizes = 3;
}